Added support for DataTable files.
- Fixed null string serialization when saving
- Refactored PropertyData to be more composable
- Moved ArrayProperty and StructProperty to cpp files since they might
    compose themselves.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp 
     ${CMAKE_CURRENT_SOURCE_DIR}/src/uasset.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/fuser_asset.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/core_types.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/serialize.h
     ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp
