--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,13 @@ file(GLOB SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/src/sha1.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/hmx_midifile.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/custom_song_creator.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/moggcrypt/aes.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/moggcrypt/CCallbacks.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/moggcrypt/OggMap.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/moggcrypt/oggvorbis.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/moggcrypt/VorbisEncrypter.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_demo.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_draw.cpp
@@ -33,6 +40,13 @@ target_include_directories(Fuser_CustomSongCreator PUBLIC "${CMAKE_CURRENT_SOURC
 target_link_libraries(
     Fuser_CustomSongCreator
     "d3d11.lib"
+	"${CMAKE_CURRENT_SOURCE_DIR}/bass/bass.lib"
 )
 
 set_property(TARGET Fuser_CustomSongCreator PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+set_source_files_properties(${SRCS} PROPERTIES LANGUAGE CXX)
+
+add_custom_command(TARGET Fuser_CustomSongCreator POST_BUILD        # Adds a post-build event to MyTest
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different  # which executes "cmake - E copy_if_different..."
+        "${CMAKE_CURRENT_SOURCE_DIR}/bass/bass.dll"      # <--this is in-file
+        $<TARGET_FILE_DIR:Fuser_CustomSongCreator>)                 # <--this is out-file path
